--- a/tests/layer2/conf/layer.conf
+++ b/tests/layer2/conf/layer.conf
@@ -1,2 +1,14 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
+
+# We have recipes-* directories, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
+
+BBFILE_COLLECTIONS += "wr-template-tests-layer2"
+BBFILE_PATTERN_wr-template-tests-layer2 = ""
+
+# This should only be incremented on significant changes that will
+# cause compatibility issues with other layers
+LAYERVERSION_wr-template-tests-layer2 = "1"
+
+LAYERDEPENDS_wr-template-tests-layer2 = "core wr-template wr-template-tests-layer1"
