--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -24,3 +24,4 @@ IMAGE_CLASSES_append = " wrltemplate_image"
 # Exclude wrtemplate* and wrimage* from eSDK's manifest
 ESDK_MANIFEST_EXCLUDES = "conf/wrtemplate* conf/wrimage*"
 
+LAYERSERIES_COMPAT_wr-template = "rocko wrl"
